[FEAT/#112] 속보 알림 리뷰 반영 및 전송 내구성 보강